Use latest version of sifli-docs-toolbox package

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-sifli-docs-toolbox @ https://github.com/OpenSiFli/sifli-docs-toolbox/releases/download/v0.1.0/sifli_docs_toolbox-0.1.0-py3-none-any.whl
+sifli-docs-toolbox @ https://downloads.sifli.com/tools/sifli-docs-toolbox/latest/sifli_docs_toolbox-latest-py3-none-any.whl
